feat: 폰트 Pretendard-Regular로 변경

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,45 +1,12 @@
 <style type="text/css">
     * {
-        font-family: 'Spoqa Han Sans', "Apple SD Gothic Neo", "Helvetica Neue", Helvetica, Arial, "Trebuchet MS", sans-serif;
+        font-family: 'Pretendard-Regular', "Apple SD Gothic Neo", "Helvetica Neue", Helvetica, Arial, "Trebuchet MS", sans-serif;
     }
 
     @font-face {
-        font-family: 'Spoqa Han Sans';
-        font-weight: 700;
-        src: local('Spoqa Han Sans Bold'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansBold.woff2') format('woff2'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansBold.woff') format('woff'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansBold.ttf') format('truetype');
-        font-display: swap;
-    }
-
-    @font-face {
-        font-family: 'Spoqa Han Sans';
+        font-family: 'Pretendard-Regular';
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
         font-weight: 400;
-        src: local('Spoqa Han Sans Regular'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansRegular.woff2') format('woff2'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansRegular.woff') format('woff'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansRegular.ttf') format('truetype');
-        font-display: swap;
-    }
-
-    @font-face {
-        font-family: 'Spoqa Han Sans';
-        font-weight: 300;
-        src: local('Spoqa Han Sans Light'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansLight.woff2') format('woff2'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansLight.woff') format('woff'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansLight.ttf') format('truetype');
-        font-display: swap;
-    }
-
-    @font-face {
-        font-family: 'Spoqa Han Sans';
-        font-weight: 100;
-        src: local('Spoqa Han Sans Thin'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansThin.woff2') format('woff2'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansThin.woff') format('woff'),
-        url('https://cdn.jsdelivr.net/gh/spoqa/spoqa-han-sans@01ff0283e4f36e159ffbf744b36e16ef742da6d8/Subset/SpoqaHanSans/SpoqaHanSansThin.ttf') format('truetype');
-        font-display: swap;
+        font-style: normal;
     }
 </style>
