--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,10 +1,10 @@
 <style type="text/css">
     * {
-        font-family: 'Pretendard-Regular', "Apple SD Gothic Neo", "Helvetica Neue", Helvetica, Arial, "Trebuchet MS", sans-serif;
+        font-family: 'Pretendard', "Apple SD Gothic Neo", "Helvetica Neue", Helvetica, Arial, "Trebuchet MS", sans-serif;
     }
 
     @font-face {
-        font-family: 'Pretendard-Regular';
+        font-family: 'Pretendard';
         src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
         font-weight: 400;
         font-style: normal;
