--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,12 +1,3 @@
-<style type="text/css">
-    * {
-        font-family: 'Pretendard', "Apple SD Gothic Neo", "Helvetica Neue", Helvetica, Arial, "Trebuchet MS", sans-serif;
-    }
-
-    @font-face {
-        font-family: 'Pretendard';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-        font-weight: 400;
-        font-style: normal;
-    }
-</style>
+<script>
+  window.global = window;
+</script>
